--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,7 @@
   "author": "Vladimir Klymniuk",
   "license": "ISC",
   "dependencies": {
+    "minimist": ">=0.2.1",
     "assert": "^1.4.1",
     "chai": "^4.2.0",
     "chai-counting": "^1.0.1",
